[gd_scene load_steps=15 format=3 uid="uid://cy3360w1huhbk"]

[ext_resource type="Script" path="res://player/player.gd" id="1_qsbr3"]
[ext_resource type="Texture2D" uid="uid://cd5alpr7lvkhe" path="res://assets/tank.png" id="2_5aj0l"]
[ext_resource type="Shader" path="res://player/blackColor.gdshader" id="2_xkfg0"]
[ext_resource type="Texture2D" uid="uid://cxaj02b7kmw4j" path="res://assets/light.png" id="3_q5vek"]
[ext_resource type="PackedScene" uid="uid://bm6effwt4a5pp" path="res://gun_controller.tscn" id="4_d4y0g"]
[ext_resource type="PackedScene" uid="uid://vpbs6vjemmyl" path="res://stats.tscn" id="5_i4alc"]
[ext_resource type="PackedScene" uid="uid://bmx4ahvoky14p" path="res://powerups/shield_effect.tscn" id="7_j1wf5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_quy2g"]
size = Vector2(16, 16)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mrq82"]
shader = ExtResource("2_xkfg0")
shader_parameter/active = false

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n7f4r"]
size = Vector2(24, 24)

[sub_resource type="Animation" id="Animation_c0itb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_duxah"]
resource_name = "Start"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="Animation" id="Animation_jl4m4"]
resource_name = "Stop"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nndcv"]
_data = {
"RESET": SubResource("Animation_c0itb"),
"Start": SubResource("Animation_duxah"),
"Stop": SubResource("Animation_jl4m4")
}

[node name="player" type="CharacterBody2D" groups=["player"]]
collision_layer = 2
collision_mask = 5
slide_on_ceiling = false
safe_margin = 0.1
script = ExtResource("1_qsbr3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_quy2g")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.972549, 0.941176, 0.533333, 1)
self_modulate = Color(0.972549, 0.941176, 0.533333, 1)
material = SubResource("ShaderMaterial_mrq82")
texture = ExtResource("2_5aj0l")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_n7f4r")

[node name="PointLight2D" type="PointLight2D" parent="."]
color = Color(0.643137, 0.905882, 0.466667, 1)
shadow_enabled = true
texture = ExtResource("3_q5vek")
texture_scale = 2.0

[node name="WeaponMountPoint" type="Marker2D" parent="."]
position = Vector2(16, 0)

[node name="GunController" parent="." instance=ExtResource("4_d4y0g")]

[node name="Stats" parent="." instance=ExtResource("5_i4alc")]
MAX_HP = 4
POINTS = 1

[node name="PlayerCamera" type="RemoteTransform2D" parent="."]

[node name="InvincibilityTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="BlinkAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_nndcv")
}

[node name="shieldEffect" parent="." instance=ExtResource("7_j1wf5")]
visible = false

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_stats_no_health"]
[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_invincibility_timer_timeout"]
